Fix some SonarQube issues